[package]
name = "impconfig"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "impconfig"
path = "src/main.rs"

[dependencies]
impulse-config = { path = "../impulse-config" }
impulse-types = { path = "../impulse-types" }
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "3.1"
serde_json = "1.0"
toml = { workspace = true }
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.25"
assert_cmd = "2.1"
predicates = "3.1"
