[package]
name = "impulse-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
impulse-types = { path = "../impulse-types" }
figment = { version = "0.10", features = ["toml", "env"] }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
notify = { version = "8.2", optional = true }
tokio = { workspace = true, features = ["sync", "time", "macros"], optional = true }
async-trait = { version = "0.1", optional = true }
tracing = { workspace = true }

[features]
default = []
hot-reload = ["notify", "tokio", "async-trait"]

[dev-dependencies]
tempfile = "3.24"
serial_test = "3.0"
proptest = { workspace = true }
