[package]
name = "impulse-file"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
impulse-types = { path = "../impulse-types" }
impulse-protocol = { path = "../impulse-protocol" }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }

# File handling
zip = "6.0"
wildmatch = "2.3"

# Upload functionality
sha2 = "0.10"
tempfile = "3"
hex = "0.4"

# Data structures
indexmap = "2.8"
