[package]
name = "impulse-integration-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
# Impulse crates - All Phase 3 features
impulse-types = { path = "../impulse-types" }
impulse-core = { path = "../impulse-core" }
impulse-auth = { path = "../impulse-auth" }
impulse-session = { path = "../impulse-session" }
impulse-message = { path = "../impulse-message" }
impulse-file = { path = "../impulse-file" }
impulse-user = { path = "../impulse-user" }
impulse-protocol = { path = "../impulse-protocol" }
impulse-door = { path = "../impulse-door" }
impulse-admin = { path = "../impulse-admin" }
impulse-terminal = { path = "../impulse-terminal" }
impulse-telnet = { path = "../impulse-telnet" }
impulse-config = { path = "../impulse-config" }

# Async runtime with test utilities
tokio = { workspace = true, features = ["full", "test-util"] }

# Testing infrastructure
tempfile = "3.14"
proptest = { workspace = true }
fake = { version = "4.4", features = ["derive"] }
criterion = { workspace = true }

# Standard dependencies
rand = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
hex = "0.4"

[dev-dependencies]
# Additional test-only dependencies
tokio-test = "0.4"

[[bench]]
name = "load_benchmarks"
harness = false
