[package]
name = "impulse-logging"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Logging ecosystem
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json", "time", "ansi", "registry"] }
tracing-appender = "0.2"

# Time handling
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Compression
flate2 = "1.1"

# File system operations
tokio = { workspace = true, features = ["fs", "time", "sync"] }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "test-util"] }
tempfile = "3.25"
proptest = { workspace = true }
serial_test = "3.3"

[[bench]]
name = "logging_benchmarks"
harness = false
