[package]
name = "impulse-message"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
impulse-types = { path = "../impulse-types" }
tokio = { workspace = true, features = ["fs", "io-util"] }
async-trait = { workspace = true }
binrw = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
unicode-width = "0.2"
zip = "2.2"  # QWK packet compression
csv = "1.3"  # CSV export support
serde_json = "1.0"  # JSON serialization

[dev-dependencies]
tempfile = "3.25"
